added scene component and started implementing a custonm hook that handles the areas and loading

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "assets/*": ["assets/*"],
         "data/*": ["data/*"],
         "contexts/*": ["contexts/*"],
+        "hooks/*": ["hooks/*"]
     },
     "typeRoots": ["./node_modules/@types", "./src/types"],
     "allowJs": true,
